improvement(seo): check meta